--- a/game/game.qsf
+++ b/game/game.qsf
@@ -141,4 +141,5 @@ set_global_assignment -name VHDL_FILE debounce.vhd
 set_location_assignment PIN_G6 -to ps2_clk
 set_location_assignment PIN_H5 -to ps2_data
 set_location_assignment PIN_M23 -to sbutton
+set_global_assignment -name VHDL_FILE hex_display.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
